[package]
name = "xprompt"
version = "0.1.0"
authors = ["Nick Pillitteri"]
description = "Display a colorful Bash prompt"
homepage = "https://github.com/56quarters/xprompt"
repository = "https://github.com/56quarters/xprompt"
readme = "README.md"
license = "GPL-3.0+"
keywords = ["bash", "prompt"]
edition = "2018"

[dependencies]
ansi_term = "0.12.1"
clap = "3.0.0-beta.2"
clap_derive = "3.0.0-beta.2"
chrono = "0.4.19"
gethostname = "0.2.1"
git2 = { version = "0.13.12", default-features = false }