[package]
name = "xprompt"
version = "0.2.3"
authors = ["Nick Pillitteri"]
description = "Display a colorful Bash prompt"
homepage = "https://github.com/56quarters/xprompt"
repository = "https://github.com/56quarters/xprompt"
readme = "README.md"
license = "GPL-3.0+"
keywords = ["bash", "prompt"]
edition = "2018"

[dependencies]
ansi_term = "0.12.1"
clap = {version = "3.0.0-rc.8", features = ["derive", "cargo"]}
git2 = { version = "0.13.12", default-features = false }
